[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "envault"
version = "0.1.0"
description = "Sync secrets from AWS SSM Parameter Store into local .env files."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "envault contributors" }]
keywords = ["secrets", "ssm", "dotenv", "aws", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "boto3>=1.34",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[ssm]>=5.0",
    "ruff>=0.4",
]

[project.urls]
"Homepage" = "https://github.com/envault/envault"
"Bug Tracker" = "https://github.com/envault/envault/issues"
"Changelog" = "https://github.com/envault/envault/blob/main/CHANGELOG.md"

[project.scripts]
envault = "envault.cli:main"

[tool.pytest.ini_options]
testpaths = ["envault/tests"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
